--- a/css/styles.css
+++ b/css/styles.css
@@ -41,6 +41,8 @@ header::before {
   background-color: #000;
   background-image: url(https://static.pexels.com/photos/238306/pexels-photo-238306.jpeg);
   background-size: cover;
+  -webkit-transform-origin: center center 0;
+  -webkit-transform: translateZ(-1px) scale(2);
   transform-origin: center center 0;
   transform: translateZ(-1px) scale(2);
   z-index: -1;
@@ -129,43 +131,6 @@ nav ul li {
   text-transform: lowercase; 
 }
 
-.content{
-  font-family: 'Poppins', sans-serif;
-  text-align: center;
-}
-
-.pizzaName{
-  font-family: 'Playfair Display', sans-serif;
-  text-transform: lowercase;
-  font-style: italic;
-  font-size: 26px;
-  color: #000;
-  letter-spacing: 5px;
-  border-top: 2px solid #000;
-}
-
-.sectionTitle{
-  font-family: 'Playfair', serif;
-  font-size: 45px;
-  color: #fff;
-  letter-spacing: 5px;
-  text-transform: uppercase;
-}
-
-.description{
-  font-family: 'Poppins', sans-serif;
-  font-size: 16px;
-  color: #fff;
-  letter-spacing: 1px;
-  text-transform: lowercase;
-}
-
-.price{
-  font-family: 'Playfair Display', serif;
-  font-size: 24px;
-  color: #000;
-  line-height: 0;
-}
 
 #special{
   font-family: 'Poppins', sans-serif;
@@ -175,11 +140,15 @@ nav ul li {
   line-height: 0px;
 }
 
+.content{
+  text-align: center;
+  font-family: "Poppins", "Arial", sans-serif;
+}
+
 #today{
   background-color: #000;
   height: auto;
 }
-
 
 ul{
   list-style-type: none;
@@ -202,11 +171,7 @@ a{
   padding: 0px 100px 0px 100px;
 }
 
-#subscribe{
-  background-color: #000;
-  height: 220px;
-  font-size: 20px;
-  text-transform: uppercase;
-  letter-spacing: 0px;
+.nameOfPizza{
+  font-family: "Playfair Display", "Times New Roman", serif,
+  font-size: 22px;
 }
-
