--- a/css/styles.css
+++ b/css/styles.css
@@ -5,7 +5,7 @@ html {
 }
 
 body {
-  color: #ffffff;
+  color: #000;
   margin: 0;
   padding: 0;
   -webkit-perspective: 1px;
@@ -62,7 +62,7 @@ header p {
 }
 
 main {
-  background-color: #6A1B1C;
+  background-color: #BDB0A8;
   line-height: 1.7;
   position: relative;
   z-index: 2;
@@ -114,7 +114,7 @@ nav ul li {
 /*content*/
 
 #name{
-  color: #6A1B1C;
+  color: #5E031F;
   font-family: 'Vast Shadow', serif;
   font-size: 60px;
   text-align: center;
@@ -140,13 +140,62 @@ nav ul li {
   line-height: 0px;
 }
 
+.sectionTitle {
+  color: #000;
+  font-family: "Poppins", sans-serif;
+  font-size: 40px;
+  padding-bottom: 0px;
+  margin-bottom: -10px;
+  text-transform: uppercase; 
+  font-weight: bold;
+  letter-spacing: 1px;
+}
+
+#sectionTitleSpecial{
+  color: #fff;
+  font-family: "Poppins", sans-serif;
+  font-size: 40px;
+  padding-bottom: 0px;
+  margin-bottom: -30px;
+  text-transform: uppercase; 
+  font-weight: bold;
+  letter-spacing: 3px;
+}
+
+#specialName{
+  font-family: "Playfair Display", sans-serif;
+  font-size: 30px;
+  text-transform: lowercase;
+  letter-spacing: px;
+  margin-bottom: 0px;
+  font-style: italic;
+  color: #E1BDB1;
+}
+
+#specialPrice{
+  font-family: "Playfair Display";
+  font-size: 24px;
+  color: #f1f1f1;
+  margin: -20px 0px -20px 0px;
+  color: #E1BDB1;
+}
+
+#specialDesc{
+  font-family: "Poppins", sans-serif;
+  font-size: 16px;
+  text-transform: lowercase;
+  line-height: 20px;
+  margin-top: 0px;
+  color: #fff;
+}
+
 .content{
   text-align: center;
   font-family: "Poppins", "Arial", sans-serif;
 }
 
 #today{
-  background-color: #000;
+  background-color: #5E031F;
   height: auto;
 }
 
